--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "这是一个静**态资源服务工具**，可以将静态目录使用url进行访问",
   "main": "main.js",
   "scripts": {
+    "server": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +19,9 @@
   "homepage": "https://github.com/ay8yt/anywhere#readme",
   "devDependencies": {
     "eslint": "^4.19.1"
+  },
+  "dependencies": {
+    "art-template": "^4.12.2",
+    "colors": "^1.2.1"
   }
 }
